--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Kevin.Gao.2.png"
   name             : "Kevin Gao"
   #pronouns         : # example: "she/her"  
-  bio              : "A rare combo of deep business, operations, and strategy skills with a deep understanding of AI, machine learning, robotics, and related ethics and regulations."
+  bio              : "A rare combo of deep business, operations, and strategy skills with a keen understanding of AI, machine learning, robotics, and related ethics and regulations."
   location         : "Starkville, MS"
   #employer         : "Red Brick University"
   uri              : # URL
